apps/librespeed/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: librespeed
  name: librespeed
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: librespeed
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
