apps/librespeed/templates/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: librespeed
  namespace: librespeed
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "librespeed.lab.paultibbetts.uk"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`librespeed.lab.paultibbetts.uk`)
      kind: Rule
      services:
        - name: librespeed
          port: http
  tls:
    secretName: librespeed-tls
